# CPP-Project-Guide

./: CMakeLists.txt  Makefile  README.md  compile_flags.txt
include/calculator/: basic_calculator.hpp
include/utils/: math_utils.hpp
src/calculator/: basic_calculator.cpp  main.cpp
src/utils/: math_utils.cpp
